# bitwarden_secrets_manager_python

./: .gitignore  LICENSE  README.md  pyproject.toml
bitwarden_secrets_manager_python/: __init__.py  bws.py
bws_python/: bws.py
