[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bws_python"
authors = [{name = "Joshua Halbert"}]
version = "0.1.04"
license = {file = "LICENSE"}
description= "Python wrapper for Bitwarden Secrets Manager"
readme = "README.md"

[project.urls]
homepage = "https://github.com/jdhalbert/bitwarden_secrets_manager_python"
