[tool.poetry]
name = "bitwarden_secrets_manager_python"
version = "0.2.00"
description = "Python wrapper for Bitwarden Secrets Manager"
authors = ["jdhalbert <jdhalbert@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "bitwarden_secrets_manager_python"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
